--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <div class="reveal">
         <div class="slides">
-          <section class="first" data-background-image="img/vitkovice.jpeg" data-background-opacity=".3">
+          <section class="first" data-background-image="/img/vitkovice.jpeg" data-background-opacity=".3">
             <h1 class="heading-1">Moravskoslezský kraj</h1>
           </section>
-          <section class="uvod" data-background-image="img/vitkovice.jpeg" data-background-opacity=".3">
+          <section class="uvod" data-background-image="./img/vitkovice.jpeg" data-background-opacity=".3">
               <h1 class="heading-1">Základní informace</h1>
               <p>5 430, 54 km^2</p>
               <p>1 192 834 obyvatel</p>
