--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="reveal">
         <div class="slides">
-          <section class="first" data-background-image="/img/vitkovice.jpeg" data-background-opacity=".3">
+          <section class="first" data-background-image="./img/vitkovice.jpeg" data-background-opacity=".3">
             <h1 class="heading-1">Moravskoslezský kraj</h1>
           </section>
           <section class="uvod" data-background-image="./img/vitkovice.jpeg" data-background-opacity=".3">
